--- a/app/templates/employee/_punch_state.html
+++ b/app/templates/employee/_punch_state.html
@@ -114,7 +114,7 @@
               </svg>
             {% endif %}
           </span>
-          {% if pause_active %}Reanudar{% else %}Registrar PAUSA{% endif %}
+          {% if pause_active %}Finalizar pausa{% else %}Iniciar pausa{% endif %}
         </button>
       </form>
     </div>
