Add daily punch markers and update presence/pause control templates to show current and future days

--- a/app/templates/employee/presence_control.html
+++ b/app/templates/employee/presence_control.html
@@ -50,9 +50,9 @@
                 -
               {% endif %}
             </td>
-            <td>{{ minutes_to_hhmm(row.worked) }}</td>
-            <td>{{ minutes_to_hhmm(row.expected) }}</td>
-            <td>{{ minutes_to_hhmm(row.balance) }}</td>
+            <td>{% if row.is_open_day %}-{% else %}{{ minutes_to_hhmm(row.worked) }}{% endif %}</td>
+            <td>{% if row.is_open_day %}-{% else %}{{ minutes_to_hhmm(row.expected) }}{% endif %}</td>
+            <td>{% if row.is_open_day %}-{% else %}{{ minutes_to_hhmm(row.balance) }}{% endif %}</td>
           </tr>
         {% else %}
           <tr>
