Adopt leave workflow updates with navigation, 409 UX, CI, and smoke checks

--- a/app/templates/admin/approvals.html
+++ b/app/templates/admin/approvals.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+  {% include "admin/_sections.html" %}
   <section class="card">
     <h1>Solicitudes pendientes</h1>
     <table>
