--- a/app/templates/employee/_sections.html
+++ b/app/templates/employee/_sections.html
@@ -1,5 +1,7 @@
 {% set endpoint = request.endpoint or '' %}
+{% set sections_month = selected_month if selected_month is defined and selected_month else None %}
 <nav class="inline" style="margin-bottom: 1rem;">
-  <a class="{{ 'is-active' if endpoint == 'employee.presence_control' else '' }}" href="{{ url_for('employee.presence_control', month=selected_month) }}">Historial</a>
-  <a class="{{ 'is-active' if endpoint == 'employee.pause_control' else '' }}" href="{{ url_for('employee.pause_control', month=selected_month) }}">Control de pausas</a>
+  <a class="{{ 'is-active' if endpoint == 'employee.presence_control' else '' }}" href="{{ url_for('employee.presence_control', month=sections_month) }}">Historial</a>
+  <a class="{{ 'is-active' if endpoint == 'employee.pause_control' else '' }}" href="{{ url_for('employee.pause_control', month=sections_month) }}">Control de pausas</a>
+  <a class="{{ 'is-active' if endpoint.startswith('employee.me_leaves') or endpoint.startswith('employee.leave_cancel') else '' }}" href="{{ url_for('employee.me_leaves') }}">Vacaciones y permisos</a>
 </nav>
