--- a/app/templates/employee/leaves.html
+++ b/app/templates/employee/leaves.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+  {% include "employee/_sections.html" %}
   <section class="card">
     <h1>Solicitudes de vacaciones y permisos</h1>
     <p class="muted">{{ employee.name }}</p>
